Add basic structure to application

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     "version": "1.0",
     "manifest_version": 3,
     "action": {
-      "default_popup": "index.html"
+      "default_popup": "index.html",
+      "default_icon": "col-pal-gen-logo.png"
     }
   }
